Static Changes to some links on website

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -180,8 +180,8 @@
           <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Contact</h5>
             <ul class="list-unstyled">
-              <li><a href="#" data-toggle="modal" data-target="#termsOfService">Terms of Service</a></li>
-              <li><a href="#" data-toggle="modal" data-target="#privacyPolicy">Privacy Policy</a></li>
+              <li><a href="#termsOfService">Terms of Service</a></li>
+              <li><a href="#privacyPolicy">Privacy Policy</a></li>
               <li><a href="#contactUs">Contact Us</a></li>
             </ul>
           </div>
