--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -15,13 +15,13 @@
     <div class="col-xs-12 col-sm-7 col-md-6 col-lg-5 col-xl-6">
         <div class="search-results">
             <div class="search-results-list">
-                <div style="color:red;">*Confidential Businesses Listings are not marked on Map.
+                <div style="color:red;">*Confidential Businesses Listings are not marked on Map to protect its identity.
                     <i class="fa fa-info-circle" style="font-size:14px;" data-toggle="popover" data-trigger="hover"
                        data-content="Confidential Business Listing will not display name, address or any information that may reveal its identity."></i>
                 </div>
                 <div class="page-header">
-                    <h1 ng-if="businessName">{{businessName}} near {{businessCity}}, {{businessState}}</h1>
-                    <h1 ng-if="!businessName">{{businessType}} near {{businessCity}}, {{businessState}}</h1>
+                    <h1 ng-if="businessName">{{businessName}} found in county of {{businessCounty}}, {{businessState}}</h1>
+                    <h1 ng-if="!businessName">{{businessType}} found in county of{{businessCounty}}, {{businessState}}</h1>
                 </div>
 <!--                <div class="sorting">-->
 <!--                  <div class="row justify-content-between">-->
