Some changes to index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>RealWorth&trade; - Find RealWorth&trade; of Business!</title>
+<title>BizRealWorth&trade; - Find RealWorth&trade; of Business!</title>
 
 <!-- Bootstrap -->
 <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900%7COpen+Sans" rel="stylesheet" type="text/css" />
@@ -197,7 +197,7 @@
     </div>
   </div>
   <div style="text-align:center;border:1px solid red;">
-    <h6><small>&copy; 2020 BizRealWorth&trade; Dedicated to help Small and Medium size businesses all over USA.</small></h6>
+    <h6><small>&copy; 2020 BizRealWorth&trade; Dedicated to help Small and Medium size businesses all over US.</small></h6>
   </div>
 </footer>
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="termsOfService">
