Updated Banner link to show Chris's Article

--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -215,7 +215,7 @@
                                 <p style="color:white;">
                                     The selection of a business valuation expert becomes critical if you or your clients have a need to “know” what the value of a business is.  There are several considerations...
                                 </p>
-                                <a href="#contactUs" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
+                                <a href="#howToSelectBVExpert" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
                             </div>
                         </div>
                     </div>
