Added few html pages

--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -20,10 +20,10 @@
                 Buyers
             </a>
             <div class="dropdown-menu">
-                <a href="#" class="dropdown-item">Search Business to Buy</a>
+                <a href="#searchBusinessToBuy" class="dropdown-item">Search Business to Buy</a>
                 <a href="#postBuy" class="dropdown-item">Post Buy Requirements</a>
                 <a href="#businessBuyGuidance" class="dropdown-item">Business Buying Guidance</a>
-                <a href="#" class="dropdown-item">Find the RealWorth of Business you planning to Buy</a>
+                <a href="#findTheRealWorthOfBusiness" class="dropdown-item">Find the RealWorth of Business you planning to Buy</a>
                 <a href="#searchAgents" class="dropdown-item">Find Business Service Providers to help Buy</a>
 		<a href="#contactUs" class="dropdown-item">Apply for Business Loan or Line of Credit</a>
             </div>
@@ -35,9 +35,9 @@
             Sellers
         </a>
         <div class="dropdown-menu">
-            <a href="#" class="dropdown-item">Sell a business</a>
+            <a href="#sellABusiness" class="dropdown-item">Sell a business</a>
             <a href="#businessSellGuidance" class="dropdown-item">Business Selling Guidance</a>
-            <a href="#search" class="dropdown-item">Find the RealWorth of your Business</a>
+            <a href="#findTheRealWorthOfBusiness" class="dropdown-item">Find the RealWorth of your Business</a>
             <a href="#searchAgents" class="dropdown-item">Find Business Service Providers to help Sell</a>
         </div>
     </li>
@@ -48,8 +48,8 @@
                 Owners
             </a>
             <div class="dropdown-menu">
-                <a href="#search" class="dropdown-item">Claim your Business</a>
-                <a href="#search" class="dropdown-item">How much is my Business RealWorth?</a>
+                <a href="#claimYourBusiness" class="dropdown-item">Claim your Business</a>
+                <a href="#findTheRealWorthOfBusiness" class="dropdown-item">How much is my Business RealWorth?</a>
                 <a href="#contactUs" class="dropdown-item">How do I increase RealWorth of my Business?</a>
                 <a href="#contactUs" class="dropdown-item">My Business is in trouble!</a>
                 <a href="#contactUs" class="dropdown-item">Not able to find my Business?</a>
@@ -62,11 +62,11 @@
             Business Service Providers
         </a>
           <div class="dropdown-menu">
-          		<a href="#searchAgents" class="dropdown-item">Search Business Service Providers</a>
+          	<a href="#searchAgents" class="dropdown-item">Search Business Service Providers</a>
                 <a href="#contactUs" class="dropdown-item">Register as Business Broker</a>
-                <a href="#contactUs" class="dropdown-item">Register as Business Appraiser</a>
+                <a href="#registerAsBSPs" class="dropdown-item">Register as Business Appraiser</a>
                 <a href="#contactUs" class="dropdown-item">Register as Business Attorney</a>
-                <a href="#contactUs" class="dropdown-item">Register as M&A Advisor</a>
+                <a href="#registerAsBSPs" class="dropdown-item">Register as M&A Advisor</a>
                 <a href="#contactUs" class="dropdown-item">Advertise with BizRealWorth</a>
             </div>
       </li>
@@ -99,7 +99,6 @@
           </a>
       </li>
     </ul>
-
   </div>
 </nav>
 
