--- a/src/main/resources/static/resources/pages/searchAgents.html
+++ b/src/main/resources/static/resources/pages/searchAgents.html
@@ -4,8 +4,8 @@
     <div class="row justify-content-md-center">
       <div class="col-md-12 col-lg-12 col-xl-12">
           <div class="page-header bordered">
-              <h1 style="color: #fff">Find a Business Agent
-                  <small style="color: #fff">Search an agent who can help with Buy/sell a Business.</small>
+              <h1 style="color: #fff">Find Business Services Provider - Business Broker, Business Appraiser, Business Attorney, M&A Advisor or Business Banker
+                  <small style="color: #fff">Search an expert who can help you with Buy or Sell a Business.</small>
               </h1>
           </div>
           <form name="searchAgentsForm" ng-controller="searchAgentsController" ng-submit="submitted = true" novalidate>
@@ -29,18 +29,18 @@
                     <span style="color:red" ng-show="submitted && searchAgentsForm.serviceNeeded.$error.required">Service is required.</span>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3">
-                  <label style="margin-top:1rem">Business Category (Optional)</label>
+                  <label style="margin-top:1rem">Business Type (Optional)</label>
                     <select class="form-control form-control-md" name="businessCategory" ng-model="businessCategory"
                             ng-options="businessCategory.name for businessCategory in businessCategories"
                             id="businessCategory" ng-change="getBusinessType()">
-                        <option default selected style="color:#868e96;" value="">-- Choose Business Category --</option>
+                        <option default selected style="color:#868e96;" value="">-- Choose Business Type --</option>
                     </select>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3">
-                  <label style="margin-top:1rem">Business Type (Optional)</label>
+                  <label style="margin-top:1rem">Business Sub-Type (Optional)</label>
                     <select class="form-control form-control-md" name="businessType" ng-model="businessType"
                             ng-options="businessType for businessType in businessTypes" id="businessType">
-                        <option style="color:#868e96;" value="">-- Choose Business Type --</option>
+                        <option style="color:#868e96;" value="">-- Choose Business Sub-Type --</option>
                     </select>
                 </div>
                 <hr>
@@ -52,7 +52,7 @@
                   </select>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3">
-                  <label style="margin-top:1rem">Years of experience (Optional)</label>
+                  <label style="margin-top:1rem">Years of Experience (Optional)</label>
                   <select class="form-control form-control-md" name="year" ng-model="year"
                           ng-options="year for year in yearsOfExperience" id="year">
                       <option style="color:#868e96;" value="">-- Years --</option>
@@ -75,11 +75,14 @@
             </div>
           </form>
           <div style="padding: 20px 0px 20px 0px">
-              <h3 style="color: #fff">Why use a Business Broker? </h3>
+              <h3 style="color: #fff">Why use a Business Services Provider?</h3>
               <hr>
-                <p style="color:#fff">The thought of owning a business may sound exciting - and it can be -- but to get off to the best possible start, it is important to consider the use of a professional business broker. There are many things to account for when buying and running a business such as current market conditions, pricing and business financing. Business brokers will also help you realize your lifestyle goals -- where considerations such business hours can often be overlooked.</p>
-                <p style="color:#fff">When selling a business, business brokers can help you properly value the price of the business. Because business brokers know what buyers are looking for, they can provide valuable advice so that you can attend to the details that will help make your business more attractive to buyers. Business brokers can also help attract more prospects to your business for sale with their extended network of business resources and contacts.</p>
-                <p style="color:#fff">So when you are faced with the question as to whether it is worth using a business broker to buy or sell a business, consider these benefits. You should find that the benefits can easily justify any fees that may be involved.</p>
+                <p style="color:#fff">The thought of owning a business may sound exciting - and it can be - but to get off to the best possible start, it is 		important to consider the use help and services of an experienced Small and Medium Size Business Domain Expert. There are many things to account for when 		buying and running a business such as current market conditions, pricing and business financing.</p> 
+		<p style="color:#fff">Business Broker can help you realize your lifestyle goals - where subtle considerations such as business hours can often be 		overlooked.</p>
+                <p style="color:#fff">When selling a business, Business Appraiser can help you properly value the price of the business.</p> 
+		<p style="color:#fff">Because Business Attorneys know how to protect your interest at the tyme of the business transaction, they can provide valuable 		advice so that you can attend to the details that will help make your business more attractive to buyers.</p> 
+		<p style="color:#fff">Mergers and Acquisition Advisors can help attract more prospects to your business for sale with their extended network of 		business resources and contacts.</p>
+                <p style="color:#fff">So when you are faced with the question as to whether it is worth using services of Business Expert to buy or sell a business, 		consider these benefits. You should find that the benefits can easily justify any fees that may be involved.</p>
           </div>
           </div>
       </div>
@@ -89,14 +92,8 @@
 
 <style type="text/css">
     .col-md-12.col-lg-12.col-xl-12 {
-        background-color: #111111d4;
+        background-color: rgba(0,0,0,.4);
         margin: 20px 0 20px 0;
         display: inline-block;
     }
-    .search-agent-form.main {
-        background-image: url("../img/connectToAgents.jpg");
-        opacity: 0.8;
-        background-size: cover;
-    }
-
 </style>
