Changes as per SEO Prasad

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -173,7 +173,7 @@
           <div class="col-4 col-md-4 col-sm-4">
             <h5 subheadline>Company</h5>
             <ul class="list-unstyled">
-              <li><a href="#aboutUs">About Us</a></li>
+              <li><a href="#about_us">About Us</a></li>
               <li><a href="#productsAndServices">Services and Pricing</a></li>
             </ul>
           </div>
@@ -182,7 +182,7 @@
             <ul class="list-unstyled">
               <li><a href="#termsOfService">Terms of Service</a></li>
               <li><a href="#privacyPolicy">Privacy Policy</a></li>
-              <li><a href="#contactUs">Contact Us</a></li>
+              <li><a href="#contact_us">Contact Us</a></li>
             </ul>
           </div>
           <div class="col-4 col-md-4 col-sm-4">
