--- a/src/main/resources/static/resources/pages/businessDetails.html
+++ b/src/main/resources/static/resources/pages/businessDetails.html
@@ -166,7 +166,7 @@
                                             <div id="specification" class="panel-collapse collapse show" role="tabpanel">
                                                 <div class="card-body">
                                                     <div class="media-body" style="margin-bottom: 10px;">
-                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-if="businessDetails.isForSell === 'N'" data-ng-click="contactUs('make_offer')">
+                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-if="businessDetails.isForSell === 'N'" data-ng-click="contact_us('make_offer')">
                                                             Make an Offer
                                                             <i class="fa fa-info-circle" style="font-size:12px;" data-toggle="popover" data-trigger="hover" data-content="This business is not listed but if you are interested making any pffer, we will try to contact the owner on your behalf"></i>
                                                         </button>
@@ -174,19 +174,19 @@
 <!--                                                            <i class="fa fa-info-circle" style="font-size:14px;" data-toggle="tooltip" title="This business is not on Sale but if you are interested we will try to contact the owner on your behalf."></i>-->
 
                                                         <!-- </p> -->
-                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-if="businessDetails.isForSell === 'Y'" data-ng-click="contactUs('contact_selling_agent')">Contact Selling Agent
+                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-if="businessDetails.isForSell === 'Y'" data-ng-click="contact_us('contact_selling_agent')">Contact Selling Agent
                                                             <i class="fa fa-info-circle" style="font-size:12px;" data-toggle="popover" data-trigger="hover" data-content="This business is listed, contact Listing Agent"></i>
                                                         </button>
-                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px" data-ng-if="businessDetails.isForSell === 'N'" data-ng-click="contactUs('claim_business')">Claim Business
+                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px" data-ng-if="businessDetails.isForSell === 'N'" data-ng-click="contact_us('claim_business')">Claim Business
                                                             <i class="fa fa-info-circle" style="font-size:12px;" data-toggle="popover" data-trigger="hover" data-content="If you can prove you are owner, partner or steak holder of this Business, claim the Business"></i>
                                                         </button>
-                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-click="contactUs('geoeconomical_report')">GeoEconomical Report
+                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-click="contact_us('geoeconomical_report')">GeoEconomical Report
                                                             <i class="fa fa-info-circle" style="font-size:12px;" data-toggle="popover" data-trigger="hover" data-content="Get Geo-Economical Report specifically tailored for this type of business and take an edge over your competitors"></i>
                                                         </button>
-                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-click="contactUs('premium_valuation')">Premium Valuation Report
+                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-click="contact_us('premium_valuation')">Premium Valuation Report
                                                             <i class="fa fa-info-circle" style="font-size:12px;" data-toggle="popover" data-trigger="hover" data-content="Get Premium Valuation Report generated using industry leading valuation software by confidentially sharing past and current financial data"></i>
                                                         </button>
-                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-click="contactUs('professional_valuation')">Professional Valuation Report
+                                                        <button class="btn btn-lg btn-primary btn-block" style="font-size:14px;" data-ng-click="contact_us('professional_valuation')">Professional Valuation Report
                                                             <i class="fa fa-info-circle" style="font-size:12px;" data-toggle="popover" data-trigger="hover" data-content="Get Professional Valuation Report by connecting with Certified Businesss Valuation professional"></i>
                                                         </button>
 
