--- a/src/main/resources/static/resources/pages/header.html
+++ b/src/main/resources/static/resources/pages/header.html
@@ -20,12 +20,12 @@
                 Buyers
             </a>
             <div class="dropdown-menu">
-                <a href="#searchBusinessToBuy" class="dropdown-item">Search Business to Buy</a>
+                <a href="#search_business_for_sell" class="dropdown-item">Search Business to Buy</a>
                 <a href="#postBuy" class="dropdown-item">Post Buy Requirements</a>
-                <a href="#businessBuyGuidance" class="dropdown-item">Business Buying Guidance</a>
-                <a href="#findTheRealWorthOfBusiness" class="dropdown-item">Find the RealWorth of Business you planning to Buy</a>
+                <a href="#business_buying_guidance" class="dropdown-item">Business Buying Guidance</a>
+                <a href="#find_value_of_business" class="dropdown-item">Find the RealWorth of Business you planning to Buy</a>
                 <a href="#searchAgents" class="dropdown-item">Find Business Service Providers to help Buy</a>
-		<a href="#contactUs" class="dropdown-item">Apply for Business Loan or Line of Credit</a>
+		<a href="#contact_us" class="dropdown-item">Apply for Business Loan or Line of Credit</a>
             </div>
         </li>
     </ul>
@@ -35,9 +35,9 @@
             Sellers
         </a>
         <div class="dropdown-menu">
-            <a href="#sellABusiness" class="dropdown-item">Sell a business</a>
-            <a href="#businessSellGuidance" class="dropdown-item">Business Selling Guidance</a>
-            <a href="#findTheRealWorthOfBusiness" class="dropdown-item">Find the RealWorth of your Business</a>
+            <a href="#sell_a_business" class="dropdown-item">Sell a business</a>
+            <a href="#business_selling_guidance" class="dropdown-item">Business Selling Guidance</a>
+            <a href="#find_value_of_business" class="dropdown-item">Find the RealWorth of your Business</a>
             <a href="#searchAgents" class="dropdown-item">Find Business Service Providers to help Sell</a>
         </div>
     </li>
@@ -49,10 +49,10 @@
             </a>
             <div class="dropdown-menu">
                 <a href="#claimYourBusiness" class="dropdown-item">Claim your Business</a>
-                <a href="#findTheRealWorthOfBusiness" class="dropdown-item">How much is my Business RealWorth?</a>
-                <a href="#contactUs" class="dropdown-item">How do I increase RealWorth of my Business?</a>
-                <a href="#contactUs" class="dropdown-item">My Business is in trouble!</a>
-                <a href="#contactUs" class="dropdown-item">Not able to find my Business?</a>
+                <a href="#find_value_of_business" class="dropdown-item">How much is my Business RealWorth?</a>
+                <a href="#contact_us" class="dropdown-item">How do I increase RealWorth of my Business?</a>
+                <a href="#contact_us" class="dropdown-item">My Business is in trouble!</a>
+                <a href="#contact_us" class="dropdown-item">Not able to find my Business?</a>
             </div>
         </li>
     </ul>
@@ -63,11 +63,11 @@
         </a>
           <div class="dropdown-menu">
           	<a href="#searchAgents" class="dropdown-item">Search Business Service Providers</a>
-                <a href="#contactUs" class="dropdown-item">Register as Business Broker</a>
+                <a href="#contact_us" class="dropdown-item">Register as Business Broker</a>
                 <a href="#registerAsBSPs" class="dropdown-item">Register as Business Appraiser</a>
-                <a href="#contactUs" class="dropdown-item">Register as Business Attorney</a>
+                <a href="#contact_us" class="dropdown-item">Register as Business Attorney</a>
                 <a href="#registerAsBSPs" class="dropdown-item">Register as M&A Advisor</a>
-                <a href="#contactUs" class="dropdown-item">Advertise with BizRealWorth</a>
+                <a href="#contact_us" class="dropdown-item">Advertise with BizRealWorth</a>
             </div>
       </li>
       <li class="nav-item">
