--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -186,7 +186,7 @@
                                 <p style="color:white;">
                                     <b>Have you considered buying or selling a business or company? Do you know how much it is really worth? Buying or Selling a business is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is really worth. Use our resources to find the RralWorth&trade; of business you are planning...</b>
                                 </p>
-                                <a href="#businessBuyGuidance" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
+                                <a href="#business_buying_guidance" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
                             </div>
                         </div>
 
@@ -201,7 +201,7 @@
                                 <p style="color:white;">
                                     <b>We stand together with all Small and Medium scale Business community in these trying times of COVID-19. Please contact us, share your story and take advantage of our 6 months free listing...</b>
                                 </p>
-                                <a href="#contactUs" style="color:white;font-weight:bold;text-decoration: underline;"> Contact Us</a>
+                                <a href="#contact_us" style="color:white;font-weight:bold;text-decoration: underline;"> Contact Us</a>
                             </div>
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                                 <p style="color:white;">
                                     <b>The selection of a business valuation expert becomes critical if you or your clients have a need to “know” what the value of a business is.  There are several considerations...</b>
                                 </p>
-                                <a href="#howToSelectBVExpert" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
+                                <a href="#how_to_select_business_valuation_expert" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
                             </div>
                         </div>
                     </div>
