--- a/src/main/resources/static/resources/pages/registerAsBSPs.html
+++ b/src/main/resources/static/resources/pages/registerAsBSPs.html
@@ -32,5 +32,5 @@ html {
 
 <p>www.BizRealWorth.com is striving to be leading trustworthy Business Valuation Platform for Small and Medium size businesses and business community members all over US.</p>
 
-<p>Find out how you can create your service provider profile with us and be on our recommended professionals list for our visitors... <a href="#contactUs" style="color:black;font-weight:bold;text-decoration: underline;"> Contact Us</a></p>
+<p>Find out how you can create your service provider profile with us and be on our recommended professionals list for our visitors... <a href="#contact_us" style="color:black;font-weight:bold;text-decoration: underline;"> Contact Us</a></p>
 </div>
