Updated Linkedin company page link

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -189,7 +189,7 @@
             <h5 subheadline>Connect</h5>
             <div class="social-sharebox">
                 <a href="https://facebook.com/brw2020" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://linkedin.com/in/bizrealworth" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/biz-real-worth" target="_blank"><i class="fa fa-linkedin"></i></a>
             </div>
           </div>
         </div>
