--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -184,7 +184,7 @@
                             <div class="col-md-5 col-lg-5 col-xl-5">
                                 <h4 style="color:white;">Business Real Worth Matters!</h4>
                                 <p style="color:white;">
-                                    <b>Have you considered buying or selling a business or company? Do you know how much it is really worth? Buying or Selling a business is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is really worth. Use our resources to find the RralWorth&trade; of business you are planning...</b>
+                                    <b>Have you considered buying or selling a business or company? Do you know how much it is really worth? Buying or Selling a business is a huge financial decision. In order to make that decision, you need to make sure you have an accurate idea of what your business is really worth. Use our resources to find the RealWorth&trade; of business you are planning...</b>
                                 </p>
                                 <a href="#business_buying_guidance" style="color:white;font-weight:bold;text-decoration: underline;"> Read More</a>
                             </div>
