Fix product and services link Remove google call for latitude longitude for businesses who does not have lat long

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -174,7 +174,7 @@
             <h5 subheadline>Company</h5>
             <ul class="list-unstyled">
               <li><a href="#about_us">About Us</a></li>
-              <li><a href="#productsAndServices">Services and Pricing</a></li>
+              <li><a href="#products_and_services">Services and Pricing</a></li>
             </ul>
           </div>
           <div class="col-4 col-md-4 col-sm-4">
